--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GCP VM
 
 on:
   push:
-    branches: [main]
+    branches: [main, chetan/update]
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
@@ -22,6 +22,6 @@ jobs:
           script: |
             cd ~/streamlit
             git pull
-            pip install -r requirements.txt --quiete
+            pip install -r requirements.txt --quiet
             pm2 restart streamlit-app
             echo "Deployment complete!"
