--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ click==8.3.1
 cryptography==46.0.3
 deprecation==2.1.0
 distro==1.9.0
+extra-streamlit-components==0.1.81
 frozenlist==1.8.0
 gitdb==4.0.12
 GitPython==3.1.45
@@ -23,6 +24,7 @@ h2==4.3.0
 hpack==4.1.0
 httpcore==1.0.9
 httpx==0.28.1
+httpx-oauth==0.15.1
 hyperframe==6.1.0
 idna==3.11
 Jinja2==3.1.6
@@ -52,7 +54,7 @@ pydantic_core==2.41.5
 pydeck==0.9.1
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
+python-dotenv==1.0.1
 pytz==2025.2
 realtime==2.25.0
 referencing==0.37.0
@@ -63,6 +65,7 @@ smmap==5.0.2
 sniffio==1.3.1
 storage3==2.25.0
 streamlit==1.52.1
+streamlit-oauth==0.1.14
 StrEnum==0.4.15
 supabase==2.25.0
 supabase-auth==2.25.0
