--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
           script: |
             cd ~/streamlit
             git pull
+            source ~/venv/bin/activate
             pip install -r requirements.txt --quiet
             pm2 restart streamlit-app
             echo "Deployment complete!"
